--- a/calculator/index.html
+++ b/calculator/index.html
@@ -51,5 +51,6 @@
     </div>
 
     <script src="/assets/scripts/calc.js"></script>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
