--- a/catalonia/index.html
+++ b/catalonia/index.html
@@ -40,6 +40,7 @@ M’agrada la idea de mantenir vives les cultures i les llengües, sobretot aque
         </div>
 
         <img src="/assets/images/catalonia.png" width="30%" style="margin-left: 35%;">
+        <a class="link" href="/impressum/">impressum</a>
     </div>
 </body>
 </html>
