--- a/full_news/cat_news.html
+++ b/full_news/cat_news.html
@@ -21,6 +21,8 @@
             I got a Cat a few months back and his name is Frodo.
             I just wanted to share this and test two news at once.
         </p>
+    
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
