--- a/full_news/comic_recommendation.html
+++ b/full_news/comic_recommendation.html
@@ -21,5 +21,6 @@
             And Tomodatchi Life 2 (Tomodatchi Life was one of my first Games and I still play it To this Day)
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
