--- a/full_news/horror.html
+++ b/full_news/horror.html
@@ -27,5 +27,6 @@
             -- todays news sponsored by Doooberts
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
