--- a/full_news/start_of_the_site.html
+++ b/full_news/start_of_the_site.html
@@ -22,5 +22,6 @@
             <small> And i can show this in my resume.</small>
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
