--- a/full_news/steam_machine.html
+++ b/full_news/steam_machine.html
@@ -27,5 +27,6 @@
             and the ending was really nice (i wont spoiler tho) so check it out
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
