--- a/full_news/what_to_do.html
+++ b/full_news/what_to_do.html
@@ -21,5 +21,6 @@
             Also maybe something about mc updates or something like that.
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
