--- a/full_news/zelda_leaks.html
+++ b/full_news/zelda_leaks.html
@@ -25,5 +25,6 @@
             I am really hyped about the Movie and i hope it will be great!
         </p>
     </div>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
