--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -19,6 +19,7 @@
         <p class="info" id="moves"></p>
         <p class="info" id="types"></p>
 
+        <a class="link" href="/impressum/">impressum</a>
         <script src="/assets/scripts/pokemon.js"></script>
 </body>
 </html>
