--- a/pronouns/index.html
+++ b/pronouns/index.html
@@ -10,5 +10,6 @@
     <iframe src="https://en.pronouns.page/card/@kiwicato_o"  style="margin: auto; border:0; border-radius: 20px; width:90%; height:1000px;" loading="lazy" referrerpolicy="no-referrer">
         <a href="https://en.pronouns.page/@kiwicato_o" target="_blank" rel="noopener">@kiwicato_o</a>
     </iframe>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
