--- a/reviews/Donkey_Kong_bananza.html
+++ b/reviews/Donkey_Kong_bananza.html
@@ -34,6 +34,7 @@
             <br>
             Anyways Have Fun!!!
         </p>
+        <a class="link" href="/impressum/">impressum</a>
     </div>
 </body>
 </html>
