--- a/reviews/PEAK.html
+++ b/reviews/PEAK.html
@@ -23,6 +23,7 @@
             <br>
             I got the game gifted from a friend so my thanks goes out to her and the devs.
         </p>
+        <a class="link" href="/impressum/">impressum</a>
     </div>
 </body>
 </html>
