--- a/reviews/Split_Fiction.html
+++ b/reviews/Split_Fiction.html
@@ -43,6 +43,7 @@
 
             Ps: to that one reviewer that failed so often at the pinball section, it’s not hard i got it first try!
         </p>
+        <a class="link" href="/impressum/">impressum</a>
     </div>
 </body>
 </html>
