--- a/reviews/What_the_Golf.html
+++ b/reviews/What_the_Golf.html
@@ -17,6 +17,7 @@
             It’s a really innovative game even for non golfers. Every level feels new and is fun. The only thing thats bad is the ten hour Achievement because i was finished with the game before i got that.
 
         </p>
+        <a class="link" href="/impressum/">impressum</a>
     </div>
 </body>
 </html>
