--- a/reviews/index.html
+++ b/reviews/index.html
@@ -41,6 +41,9 @@
                 <p style="display: inline-block;">What the Golf</p>
             </div>
         </a>
+        <p>
+            <a class="link" href="/impressum/">impressum</a>
+        </p>
     </div>
 </body>
 </html>
