--- a/minecraft/skins/index.html
+++ b/minecraft/skins/index.html
@@ -31,5 +31,6 @@
     <h3 class="info" id="name"></h3>
 
     <script src="/assets/scripts/skins.js"></script>
+    <a class="link" href="/impressum/">impressum</a>
 </body>
 </html>
