--- a/reviews/Cult_Of_The_Lamb.html
+++ b/reviews/Cult_Of_The_Lamb.html
@@ -15,6 +15,8 @@
         <p>
             Its a really fun game even for people that don’t play rougelikes. The community is really nice (they had two weedings at a gaming convention).
         </p>
+        <a class="link" href="/impressum/">impressum</a>
     </div>
+    
 </body>
 </html>
