--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
             <title>Kiwicat0_0</title>
 
-            <!--Lol-->
+            <!--Lol Xd-->
 
             <script src="https://kit.fontawesome.com/1c457c6875.js" crossorigin="anonymous"></script>
 
